Fixed small styling issue with ResultsBar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -148,20 +148,24 @@ body {
 }
 
 .resultsbar {
-  display: block;
   position: relative;
   width: 100%;
   margin: 25px 0px 35px;
 
-  background: white;
+}
+.resultsbar > .bar {
+  position: relative;
+  width: 100%;
   height: 25px;
+  overflow: hidden;
+  
+  background: white;
   border-radius: 50px;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
               0px 2px 6px rgba(0, 0, 0, 0.1),
               inset 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
-
-.resultsbar > .difference {
+.resultsbar > .bar > .difference {
   position: absolute;
   top: 0px;
   height: 100%;
